@@ -1,3 +1,9 @@
+Fri Mar 12 23:37:15 2004  Soeren Sandmann  <sandmann@daimi.au.dk>
+
+	* gtk/gtkfilechooserdialog.c
+	(file_chooser_widget_default_realized_size_changed): Clamp the
+	new size to the screen.
+
 Fri Mar 12 15:06:44 2004  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtkexpander.c (gtk_expander_realize): Create the
